<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="viewModel"
                type="com.andreadematteis.assignments.beerbox.view.fragments.moreFilters.FilterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_from_screen"
                android:layout_marginHorizontal="@dimen/distance_from_screen"
                android:text="@string/all_filters_label"
                style="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/search_text_input_layout" />

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/by_brewing_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_from_screen"
                android:text="@string/by_brewing_time_frame_label"
                style="@style/TextAppearance.AppCompat.Medium"

                app:layout_constraintWidth_max="@dimen/max_length_brewing_timeframe_label"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="@id/brewing_time_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/brewing_time_text_input_layout"
                app:layout_constraintBottom_toBottomOf="@id/brewing_time_text_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/brewing_time_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/timeframe_label"
                android:layout_marginEnd="@dimen/distance_from_screen"
                android:layout_marginTop="@dimen/margin_medium"

                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24"
                app:startIconContentDescription="@string/open_date_picker_label"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/search_text_input_layout"
                app:layout_constraintStart_toEndOf="@id/by_brewing_time_label"
                app:layout_constraintWidth_max="@dimen/max_length_timeframe_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/filter_label">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brewing_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="23"
                    android:text="@={viewModel.datesFilter}"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/filter_by_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distance_from_screen"
                android:text="@string/by_name_label"
                style="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toTopOf="@id/search_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/search_text_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/search_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/filter_by_name"
                android:layout_marginHorizontal="@dimen/distance_from_screen"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:startIconDrawable="@drawable/ic_baseline_search_24"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toEndOf="@id/filter_by_name_label"
                app:layout_constraintWidth_max="@dimen/max_length_name_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/brewing_time_text_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={viewModel.nameFilter}"

                    android:maxLength="25"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_label"
                android:text="@string/reset_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distance_from_screen"
                style="@style/Widget.MaterialComponents.Button.TextButton"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel_label"
                app:layout_constraintTop_toTopOf="@id/filter_label"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintBottom_toBottomOf="@id/filter_label" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_label"
                android:text="@string/cancel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:layout_constraintHorizontal_chainStyle="packed"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/filter_label"
                app:layout_constraintTop_toTopOf="@id/filter_label"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintBottom_toBottomOf="@id/filter_label" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_label"
                android:text="@string/filter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_from_screen"
                android:layout_marginBottom="@dimen/distance_from_screen"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginTop="@dimen/margin_very_lorge"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/cancel_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/brewing_time_text_input_layout"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>