<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BeerActivity">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/beer_box_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_from_screen"
            android:layout_marginHorizontal="@dimen/distance_from_screen"
            android:textSize="@dimen/title_text_size"
            android:text="@string/beer_box_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/search_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/search_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_label"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/distance_from_screen"

            app:startIconDrawable="@drawable/ic_baseline_search_24"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/beer_box_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gift_box_card_view">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
            android:id="@+id/gift_box_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/distance_from_screen"
            android:layout_marginTop="@dimen/margin_medium"

            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/scrollview_filter_buttons"
            app:layout_constraintTop_toBottomOf="@id/search_text_input_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gift_box"
                android:layout_width="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:layout_marginHorizontal="@dimen/distance_from_screen"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/gift_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    app:layout_constraintWidth_max="150dp"
                    app:layout_constraintHeight_max="150dp"
                    app:srcCompat="@drawable/ic_gift"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline_gift_box"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_gift_box"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"

                    app:layout_constraintGuide_percent="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gift_box_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weekend_offers_label"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"

                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/gift_box_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_gift_box" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gift_box_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weekend_offers_subtitle"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"

                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintTop_toBottomOf="@id/gift_box_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline_gift_box" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
            android:id="@+id/scrollview_filter_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/gift_box_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:id="@+id/button_toggle_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                    style="@style/ToggleButton"
                    android:layout_marginStart="@dimen/distance_from_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/toggle_button_height"
                    android:text="@string/blonde_label" />

            <androidx.appcompat.widget.AppCompatButton
                    style="@style/ToggleButton"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/toggle_button_height"
                    android:text="@string/lager_label" />

            <androidx.appcompat.widget.AppCompatButton
                    style="@style/ToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/toggle_button_height"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/malts_label" />

            <androidx.appcompat.widget.AppCompatButton
                    style="@style/ToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/toggle_button_height"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/distance_from_screen"
                    android:text="@string/stouts_strong_label" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_beer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/distance_from_screen"
            android:visibility="invisible"
            tools:listitem="@layout/item_beer"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollview_filter_buttons"
            app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nothing_matches_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results_label"
            android:visibility="invisible"
            tools:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/recycler_view_beer"
            app:layout_constraintEnd_toEndOf="@id/recycler_view_beer"
            app:layout_constraintTop_toTopOf="@id/recycler_view_beer"
            app:layout_constraintBottom_toBottomOf="@id/recycler_view_beer"/>
    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"

            android:visibility="visible"
            tools:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/recycler_view_beer"
            app:layout_constraintStart_toStartOf="@id/recycler_view_beer"
            app:layout_constraintEnd_toEndOf="@id/recycler_view_beer"
            app:layout_constraintBottom_toBottomOf="@id/recycler_view_beer"/>
</androidx.constraintlayout.widget.ConstraintLayout>